# mini-redis

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  app.py  mini_redis_api.md  pyproject.toml  pytest.ini
api/: app.py  routes.py
api/tests/: conftest.py  test_api.py  test_routes.py
mini_redis/: __init__.py  data_stores.py  mini_redis.py
mini_redis/tests/: test_mini_redis_basic_commands.py
mini_redis_server/: routes.py  server.py
mini_redis_server/mini_redis/: __init__.py  constants.py  mini_redis.py
simple_server/: routes.py  server.py
tests/: test_mini_redis_server.py  test_mini_redis_version.py
tests/mini_redis/: test_data_stores.py  test_mini_redis.py  test_mini_redis_basic_commands.py  test_utils.py
tests/mini_redis/utils/: test_data_utils.py
tests/utils/: test_data_utils.py
utils/: data_utils.py
utils/tests/: test_data_utils.py
